--- a/Reminder/Base.lproj/Main.storyboard
+++ b/Reminder/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Reminder List View Controller-->
         <scene sceneID="PVZ-1L-6Zz">
             <objects>
-                <collectionViewController id="CfL-P4-CKT" sceneMemberID="viewController">
+                <collectionViewController id="CfL-P4-CKT" customClass="ReminderListViewController" customModule="Reminder" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="EZj-tw-vXT">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
